CRISIMP-202 fixed alignment of importvalues and cristinvalues

--- a/src/assets/styles/buttons.scss
+++ b/src/assets/styles/buttons.scss
@@ -10,25 +10,6 @@
 .buttonGroup {
   max-width: 0;
 }
-.createJournalPanel {
-  position: absolute;
-  top: 385px;
-  right: 35px;
-}
-
-.createJournalButton {
-  width: 130px;
-  position: absolute;
-  right: -30px;
-  top: -1px;
-}
-
-.createJournalCard {
-  position: relative;
-  left: 150px;
-  top: 40px;
-  width: 250px;
-}
 
 .errorLogoutButton {
   margin: 0 auto;
